# LANCE

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  README.md  setup.py
coolchic/: encode.py
coolchic/cpp/: arm_avx2.cpp  arm_avx2.h  arm_avx2.hpp  cc-bac.h  cc-bitstream.cpp  cc-bitstream.h  cc-contexts.h  cc-frame-decoder.cpp  cc-frame-decoder.h  common_avx2.h  frame-memory.h  loco.h  resampler.cpp  resampler.h  sparm_cpu.cpp  sparm_cpu.h  syn_avx2.h  syn_cpu.h  ups_avx2.h  ups_cpu.h
coolchic/dec/: nn.py
coolchic/enc/bitstream/: armint.py  bicubic_params.py  encode.py  header.py  spatialprior_interpolatorint.py
coolchic/enc/component/: coolchic.py  frame.py  types.py
coolchic/enc/component/core/: arm.py  spatialprior.py  spatialprior_interpolator.py
coolchic/enc/nnquant/: expgolomb.py  quantizemodel.py  quantstep.py
coolchic/enc/training/: loss.py  quantizemodel.py  test.py  train.py
coolchic/enc/utils/: parsecli.py  termprint.py
